--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,45 @@ typings/
 # next.js build output
 .next
 
+### Babel ###
+/packages/*/node_modules
+*.cache
+/build
+/.eslintcache
+/browser.js
+/browser-polyfill.js
+/runtime.js
+dist
+/.package.json
+package-lock.json
+/packages/babel-runtime/core-js/**/*.js
+!/packages/babel-runtime/core-js/map.js
+/packages/babel-runtime/helpers/*.js
+!/packages/babel-runtime/helpers/toArray.js
+!/packages/babel-runtime/helpers/temporalRef.js
+/packages/babel-runtime/helpers/builtin/*.js
+!/packages/babel-runtime/helpers/builtin/toArray.js
+!/packages/babel-runtime/helpers/builtin/temporalRef.js
+/packages/babel-runtime/helpers/builtin/es6/*.js
+!/packages/babel-runtime/helpers/builtin/es6/toArray.js
+!/packages/babel-runtime/helpers/builtin/es6/temporalRef.js
+/packages/babel-runtime/helpers/es6/*.js
+!/packages/babel-runtime/helpers/es6/toArray.js
+!/packages/babel-runtime/helpers/es6/temporalRef.js
+/packages/babel-register/test/.babel
+/packages/babel-cli/test/tmp
+/packages/babel-node/test/tmp
+/packages/*/lib
+/babel.sublime-workspace
+packages/babel-standalone/babel.js
+packages/babel-standalone/babel.min.js
+packages/babel-preset-env-standalone/babel-preset-env.js
+packages/babel-preset-env-standalone/babel-preset-env.min.js
+/codemods/*/lib
+/codemods/*/node_modules
+/packages/babylon/build
+.idea/
+
 ### React ###
 .DS_STORE
 node_modules
