--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "webpack": "./node_modules/.bin/webpack -w",
     "build": "babel src -d lib"
   },
-  "dependencies": {
-    "react": "^15.6.2"
-  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^6.1.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.0.0",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.9",
+    "enzyme": "^3.3.0",
     "express": "^4.16.2",
+    "mocha": "^5.0.1",
     "node-sass": "^4.7.2",
+    "react": "^15.6.2",
     "react-material-design": "^0.3.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
