--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "url": "git+https://github.com/Jacobinski/inc-web.git"
   },
   "scripts": {
-    "start": "nodemon src/server/index.js",
-    "webpack": "./node_modules/.bin/webpack -w",
+    "start": "nodemon lib/server/server.js",
+    "webpack": "./node_modules/.bin/webpack -w --display-error-details",
     "build": "babel src -d lib"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.1.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.0.0",
@@ -22,14 +27,15 @@
     "express": "^4.16.2",
     "mocha": "^5.0.1",
     "node-sass": "^4.7.2",
-    "react": "^15.6.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-material-design": "^0.3.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "webpack": "^2.7.0"
   },
   "peerDependencies": {
-    "react": "^15.6.2"
+    "react": "^16.0.0"
   },
   "babel": {
     "presets": [
