--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
-    "webpack": "^2.7.0"
+    "webpack": "^2.7.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "peerDependencies": {
     "react": "^16.0.0"
