--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "babel src -d lib"
   },
   "dependencies": {
+    "materialize-css": "^1.0.0-alpha.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
