--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "build": "babel src -d lib"
   },
   "dependencies": {
+    "install": "^0.10.4",
     "materialize-css": "^1.0.0-alpha.4",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
+    "react-calendar": "^2.13.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "whatwg-fetch": "^2.0.3"
