--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "babel src -d lib"
   },
   "dependencies": {
+    "chart.js": "^2.7.2",
     "install": "^0.10.4",
     "materialize-css": "^1.0.0-alpha.4",
     "npm": "^5.7.1",
