--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^2.13.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "socket.io": "^2.0.4",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
