--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "chart.js": "^2.7.2",
+    "express": "^4.16.3",
     "install": "^0.10.4",
     "materialize-css": "^1.0.0-alpha.4",
+    "nodemon": "^1.17.2",
     "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-calendar": "^2.13.1",
@@ -31,7 +33,6 @@
     "chai": "^4.1.2",
     "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
-    "express": "^4.16.2",
     "mocha": "^5.0.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
