--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-calendar": "^2.13.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "socket.io-client": "^2.1.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
