--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-calendar": "^2.13.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "serve-favicon": "^2.5.0",
     "socket.io-client": "^2.1.0",
     "whatwg-fetch": "^2.0.3"
   },
@@ -34,10 +35,12 @@
     "chai": "^4.1.2",
     "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
+    "file-loader": "^1.1.11",
     "mocha": "^5.0.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
     "webpack": "^2.7.0"
   },
   "peerDependencies": {
